# pigture

./: .env.example  .gitignore  1.html  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: manage.py
backend/src/config/: celery.py  routers.py  settings.py  urls.py
backend/src/core/: apps.py  models.py  permissions.py  utils.py  vips.py
backend/src/core/management/commands/: createadmin.py
backend/src/core/migrations/: 0001_initial.py  0002_delete_abstractmodel.py
backend/src/images/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/src/images/migrations/: 0001_initial.py  0002_alter_image_description.py  0002_alter_image_options.py  0002_category_tag_alter_image_options_alter_image_image_and_more.py  0002_image_tiles_delete_tiles.py  0003_image_category_image_tags_alter_image_image.py  0003_image_thumbnail_alter_image_tiles.py  0004_image_description_image_metadata_image_name_and_more.py  0005_tiles.py
backend/src/marking/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/marking/migrations/: 0001_initial.py
backend/src/notes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/notes/migrations/: 0001_initial.py
backend/src/patients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/patients/migrations/: 0001_initial.py
frontend/: README.md  config.ts  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/api/proxy/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: file-upload-progress.tsx  file-uploader.tsx  login-form.tsx  osd.tsx  todo-item.tsx  todo-list.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx
frontend/components/utils/: axiosInstance.ts
frontend/lib-f/: apiClient.ts  auth.ts
nginx/: Dockerfile  nginx.conf
(+12 files in other folders)
